--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,61 @@
 asgiref==3.8.1
+bidict==0.23.1
+blinker==1.9.0
+Brotli==1.1.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+ConfigArgParse==1.7.1
 Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+Faker==37.3.0
+Flask==3.1.1
+flask-cors==6.0.0
+Flask-Login==0.6.3
+gevent==24.11.1
+geventhttpclient==2.3.3
+graphene==3.4.3
+graphene-django==3.2.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+greenlet==3.2.2
+h11==0.16.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+locust==2.37.5
+locust-cloud==1.21.8
+MarkupSafe==3.0.2
+msgpack==1.1.0
+packaging==25.0
+platformdirs==4.3.8
+promise==2.3
+psutil==7.0.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.10
+pycparser==2.22
 PyJWT==2.9.0
+python-dateutil==2.9.0.post0
+python-engineio==4.12.1
+python-socketio==5.13.0
+pywin32==310
+pyzmq==26.4.0
+requests==2.32.3
 RestrictedPython==8.0
+simple-websocket==1.1.0
+six==1.17.0
 sqlparse==0.5.3
+text-unidecode==1.3
+typing_extensions==4.13.2
 tzdata==2025.2
+urllib3==2.4.0
+waitress==3.0.2
+websocket-client==1.8.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zope.event==5.0
+zope.interface==7.2
