--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Django==5.2
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+dotenv==0.9.9
 Faker==37.3.0
 Flask==3.1.1
 flask-cors==6.0.0
@@ -40,6 +41,7 @@ psycopg2-binary==2.9.10
 pycparser==2.22
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-engineio==4.12.1
 python-socketio==5.13.0
 pywin32==310
